5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1168/executions/1573_996.log
== TEST (2019-03-18 10:33:51) 
-- CODE:
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:33:56) 
-- CODE:
print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(A)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:34:38) 
-- CODE:
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:35:09) 
-- CODE:
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:35:23) 
-- CODE:
print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(A)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:35:33) 
-- CODE:
print(AasdasdfaA1213231)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(AasdasdfaA1213231)
NameError: name 'AasdasdfaA1213231' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:37:40) 
-- CODE:
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:37:54) 
-- CODE:
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:38:40) 
-- CODE:
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
